--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.1.2",
-    "babel-preset-es2015": "^6.6.0",
-    "browser-sync": "^2.10.0",
-    "cssnano": "^3.4.0",
-    "cssnext": "^1.8.4",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-postcss": "^6.0.1",
-    "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1",
-    "lost": "^6.6.2",
-    "rucksack-css": "^0.8.5"
+    "autoprefixer": "latest",
+    "babel-preset-es2015": "latest",
+    "cssnano": "latest",
+    "cssnext": "latest",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babel": "latest",
+    "gulp-concat": "latest",
+    "gulp-ng-annotate": "latest",
+    "gulp-postcss": "latest",
+    "gulp-sass": "latest",
+    "gulp-uglify": "latest",
+    "gulp-webserver": "latest",
+    "lost": "latest",
+    "rucksack-css": "latest"
   }
 }
