Update to use component architecture

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "babel-preset-es2015": "latest",
     "cssnano": "latest",
     "cssnext": "latest",
+    "eslint": "latest",
+    "eslint-config-airbnb-base": "latest",
+    "eslint-plugin-import": "latest",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "latest",
     "gulp-concat": "latest",
