--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,20 +1,46 @@
+severity: error
+
 linters:
-    Indentation:
-        character: tab
-        width: 1
-    Comment:
-        enabled: false
-    SelectorDepth:
-        max_depth: 4
-    NestingDepth:
-        enabled: true
-        max_depth: 4
-        ignore_parent_selectors: false
-    PropertySortOrder:
-        enabled: false
-    PropertySpelling:
-        enabled: false
-    ImportantRule:
-        enabled: false
-    ColorVariable:
-        enabled: false
+
+  BorderZero:
+    enabled: true
+    convention: zero
+
+  BemDepth:
+    enabled: true
+
+  DeclarationOrder:
+    enabled: false
+
+  ExtendDirective:
+    enabled: true
+
+  LeadingZero:
+    enabled: false
+
+  NameFormat:
+    enabled: true
+
+  PrivateNamingConvention:
+    enabled: true
+    prefix: _
+
+  PropertySortOrder:
+    enabled: false
+
+  QualifyingElement:
+    enabled: false
+
+  SelectorFormat:
+    enabled: true
+    convention: hyphenated_BEM
+    class_convention: ^(?!js-).*
+    class_convention_explanation: should not be written in the form js-*
+
+  SingleLinePerProperty:
+    enabled: true
+    allow_single_line_rule_sets: false
+
+  StringQuotes:
+    enabled: true
+    style: double_quotes
