--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gulp-postcss",
+  "name": "gulp-ng-boilerplate",
   "version": "0.0.1",
   "description": "Gulp dependencies and PostCSS Processors",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,10 @@
     "gulp-sass": "latest",
     "gulp-uglify": "latest",
     "gulp-webserver": "latest",
+    "jasmine-core": "latest",
+    "karma": "latest",
+    "karma-chrome-launcher": "latest",
+    "karma-jasmine": "latest",
     "lost": "latest",
     "rucksack-css": "latest"
   }
