--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "angular": "latest",
     "angular-animate": "latest",
-    "angular-ui-router": "latest",
+    "angular-ui-router": "latest"
   },
   "devDependencies": {
-    "angular-mocks": "latest",
+    "angular-mocks": "latest"
   }
 }
