--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "gulp-ng-boilerplate",
   "version": "0.0.1",
-  "description": "Gulp dependencies and PostCSS Processors",
+  "description": "Angular Boilerplate dependencies",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "build": "gulp build",
+    "test": "karma start",
+    "start": "gulp watch"
   },
   "repository": {
     "type": "git",
@@ -14,7 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "latest",
+    "babel-core": "latest",
     "babel-preset-es2015": "latest",
+    "browser-sync": "^2.12.10",
     "cssnano": "latest",
     "cssnext": "latest",
     "eslint": "latest",
@@ -23,6 +27,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "latest",
     "gulp-concat": "latest",
+    "gulp-eslint": "^2.0.0",
     "gulp-ng-annotate": "latest",
     "gulp-postcss": "latest",
     "gulp-sass": "latest",
